Completed US 83
